Correção de bugs e implementação do ID automatico