@@ -6,8 +6,6 @@ import java.util.Scanner;
 
 public class LeitorDeDadosComTratamento {
 
-	private static Scanner sc = new Scanner(System.in);
-
 	private String variavelInteira; // 1
 	private String variavelFloat; // 2
 	private String variavelDouble; // 3
@@ -48,9 +46,9 @@ public class LeitorDeDadosComTratamento {
 	}
 
 	private boolean recebeInteger() { /// Le Integer com tratamento
+		Scanner sc = new Scanner(System.in);
 		try {
 			this.variavelInteira = Integer.toString(sc.nextInt());
-			sc.next();
 		} catch (Exception erroInt) {
 			sc.next();
 			System.err.println("\nEntrada inválida! Insira apenas números.");
@@ -60,9 +58,9 @@ public class LeitorDeDadosComTratamento {
 	}
 
 	private boolean recebeFloat() { /// Le Float com tratamento
+		Scanner sc = new Scanner(System.in);
 		try {
 			this.variavelFloat = Float.toString(sc.nextFloat());
-			sc.next();
 		} catch (Exception erroFloat) {
 			sc.next();
 			System.err.println("\nEntrada inválida! Insira apenas números e utilize o separador ','");
@@ -72,9 +70,9 @@ public class LeitorDeDadosComTratamento {
 	}
 
 	private boolean recebeDouble() { /// Le Double com tratamento
+		Scanner sc = new Scanner(System.in);
 		try {
-			this.variavelDouble = Double.toString(sc.nextDouble());
-			sc.next();
+			this.variavelDouble = Double.toString(sc.nextDouble());	
 		} catch (Exception erroDouble) {
 			sc.next();
 			System.err.println("\nEntrada inválida! Insira apenas números e utilize o separador ','");
@@ -84,6 +82,7 @@ public class LeitorDeDadosComTratamento {
 	}
 
 	private boolean recebeString() { /// Le String com tratamento
+		Scanner sc = new Scanner(System.in);
 		try {
 			this.variavelString = sc.nextLine();
 			if (this.variavelString.trim().isEmpty())
@@ -98,13 +97,14 @@ public class LeitorDeDadosComTratamento {
 	}
 	
 	private boolean recebeData() { /// Le Data com tratamento
+		Scanner sc = new Scanner(System.in);
 		try {
 			this.variavelData = sc.nextLine();
-			if (this.variavelString.trim().isEmpty())
+			if (this.variavelData.trim().isBlank())	
 				throw new IllegalArgumentException();
 			else {
 				DateTimeFormatter formato = DateTimeFormatter.ofPattern("dd/MM/yyyy");
-				LocalDate dl = LocalDate.parse(variavelData, formato);
+				LocalDate.parse(variavelData, formato);
 			}	
 		} catch (Exception erroString) {
 
